Create game board

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <body>
     <h1>Tick Tock Toe</h1>
       <table id="board">
+        <tr id="0" class="row">
+        <td id="00" class="square"></td>
+        <td id="01" class="square"></td>
+        <td id="02" class="square"></td>
+      </tr>
+
+      <tr id="1" class="row">
+        <td id="10" class="square"></td>
+        <td id="11" class="square"></td>
+        <td id="12" class="square"></td>
+      </tr>
+
+      <tr id="2" class="row">
+        <td id="20" class="square"></td>
+        <td id="21" class="square"></td>
+        <td id="22" class="square"></td>
+      </tr>
       </table>
   </body>
 </html>
