Add beginnings of board logic

--- a/index.html
+++ b/index.html
@@ -27,4 +27,6 @@
       </tr>
       </table>
   </body>
+  <script type="text/javascript" src="underscore-min.js"></script>
+  <script type="text/javascript" src="boardLogic.js"></script>
 </html>
