--- a/index.html
+++ b/index.html
@@ -29,4 +29,5 @@
   </body>
   <script type="text/javascript" src="underscore-min.js"></script>
   <script type="text/javascript" src="boardLogic.js"></script>
+  <script type="text/javascript" src="gameLogic.js"></script>
 </html>
