--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </tr>
       </table>
   </body>
+  <script type="text/javascript" src="bower_components/jquery-3.0.0.min/index.js"></script>
   <script type="text/javascript" src="underscore-min.js"></script>
   <script type="text/javascript" src="boardLogic.js"></script>
   <script type="text/javascript" src="gameLogic.js"></script>
