Display time remaining in player's turn

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
         <td id="22" class="square"></td>
       </tr>
       </table>
+
+      <div>
+        <h2 id="timer"><h2>
+        <button id="start">Start</button>
+      </div>
   </body>
   <script type="text/javascript" src="bower_components/jquery-3.0.0.min/index.js"></script>
   <script type="text/javascript" src="underscore-min.js"></script>
   <script type="text/javascript" src="boardLogic.js"></script>
   <script type="text/javascript" src="gameLogic.js"></script>
+  <script type="text/javascript" src="timer.js"></script>
 </html>
