Add pause button, style Clock div

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="main.css"></style>
   </head>
   <body>
+
     <h1>Tick Tock Toe</h1>
       <table id="board">
         <tr id="0" class="row">
@@ -27,9 +28,10 @@
       </tr>
       </table>
 
-      <div>
-        <h2 id="timer"><h2>
+      <div id="clock">
+        <h2 id="timer">8<h2>
         <button id="start">Start</button>
+        <button id="pause">Pause</button>
       </div>
   </body>
   <script type="text/javascript" src="bower_components/jquery-3.0.0.min/index.js"></script>
