--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button id="pause">Pause</button>
       </div>
   </body>
-  <script type="text/javascript" src="bower_components/jquery-3.0.0.min/index.js"></script>
+  <script type="text/javascript" src="jquery-3.1.0.min.js"></script>
   <script type="text/javascript" src="underscore-min.js"></script>
   <script type="text/javascript" src="boardLogic.js"></script>
   <script type="text/javascript" src="gameLogic.js"></script>
