Fix script & link tags in index.html & clean up code

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Tick-Tock-Toe</title>
-    <link rel="stylesheet" type="text/css" href="main.css"></style>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
 
     <h1>Tick Tock Toe</h1>
-      <table id="board">
-        <tr id="0" class="row">
+    <table id="board">
+      <tr id="0" class="row">
         <td id="00" class="square"></td>
         <td id="01" class="square"></td>
         <td id="02" class="square"></td>
@@ -26,17 +26,18 @@
         <td id="21" class="square"></td>
         <td id="22" class="square"></td>
       </tr>
-      </table>
+    </table>
 
-      <div id="clock">
-        <h2 id="timer">5<h2>
-        <button id="start">Start</button>
-        <button id="pause">Pause</button>
-      </div>
+    <div id="clock">
+      <h2 id="timer">5<h2>
+      <button id="start">Start</button>
+      <button id="pause">Pause</button>
+    </div>
+
   </body>
-  <script type="text/javascript" src="jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="underscore-min.js"></script>
-  <script type="text/javascript" src="boardLogic.js"></script>
-  <script type="text/javascript" src="gameLogic.js"></script>
-  <script type="text/javascript" src="timer.js"></script>
+  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+  <script type="text/javascript" src="js/underscore-min.js"></script>
+  <script type="text/javascript" src="js/boardLogic.js"></script>
+  <script type="text/javascript" src="js/gameLogic.js"></script>
+  <script type="text/javascript" src="js/timer.js"></script>
 </html>
