--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
 
+  <div class="game-container">
+
     <h1>Tick Tock Toe</h1>
     <table id="board">
       <tr id="0" class="row">
@@ -33,6 +35,8 @@
       <button id="start">Start</button>
       <button id="pause">Pause</button>
     </div>
+    
+  </div>
 
   </body>
   <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
