--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tick-Tock-Toe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
@@ -35,7 +36,7 @@
       <button id="start">Start</button>
       <button id="pause">Pause</button>
     </div>
-    
+
   </div>
 
   </body>
