Try different style for small screens

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     </table>
 
     <div id="clock">
-      <h2 id="timer">5<h2>
-      <button id="start">Start</button>
-      <button id="pause">Pause</button>
+      <h2 id="timer">5</h2>
+      <h2>
+        <button id="start">Start</button>
+        <button id="pause">Pause</button>
+      </h2>
     </div>
 
   </div>
